--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -23,6 +23,35 @@
       <br class="clear" />
     </div>
   </div>
+
+  <!-- start custom html code -->
+  <div class="container custom-content section-standard" data-section-id="{{ section.id }}" data-section-type="custom-content-section">
+    <div class="contain-full-width">
+      <div class="wrapper">
+        {% for block in section.blocks %}
+          {% case block.type %}
+            {% when 'html' %}
+              {% if block.settings.title != blank %}
+                <header>
+                  <h4>{{ block.settings.title | escape }}
+                  </h4>
+                </header>
+              {% endif %}
+              <div class="custom-content-container">
+                <div id="block-{{ block.id }}" class="custom__item custom__item-{{ block.type }} {% if block.settings.full_width %}custom__item-full_width{% endif %}" {{ block.shopify_attributes }}>
+                  <div class="content">
+                    {% if block.settings.code != blank %}
+                      {{ block.settings.code }}
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
+          {% endcase %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <!-- end custom html code -->
 {% else %}
 
   <form action="/cart" method="post" id="cart_form">
@@ -30,6 +59,7 @@
       <div class="eleven columns medium-down--one-whole">
         {% assign total_saving = 0 %}
         {% for item in cart.items %}
+          <div class="vuex-oc-products_hidden" product_id="{{ item.product.id }}" quantity="{{ item.quantity }}" unit_price="{{ item.variant.price }}" hidden/>
           {% if item.variant.compare_at_price > item.variant.price %}
             {% assign saving = item.variant.compare_at_price | minus: item.variant.price | times: item.quantity %}
             {% assign total_saving = saving | plus: total_saving %}
@@ -168,6 +198,35 @@
     </div>
   </form>
 
+  <!-- start custom html code -->
+  <div class="container custom-content section-standard" data-section-id="{{ section.id }}" data-section-type="custom-content-section">
+    <div class="contain-full-width">
+      <div class="wrapper">
+        {% for block in section.blocks %}
+          {% case block.type %}
+            {% when 'html' %}
+              {% if block.settings.title != blank %}
+                <header>
+                  <h4>{{ block.settings.title | escape }}
+                  </h4>
+                </header>
+              {% endif %}
+              <div class="custom-content-container">
+                <div id="block-{{ block.id }}" class="custom__item custom__item-{{ block.type }} {% if block.settings.full_width %}custom__item-full_width{% endif %}" {{ block.shopify_attributes }}>
+                  <div class="content">
+                    {% if block.settings.code != blank %}
+                      {{ block.settings.code }}
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
+          {% endcase %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <!-- end custom html code -->
+
   <!-- start Recomatic code -->
 
    <div id="recomatic-asset-url" data-value="https://cdn.shopify.com/s/files/1/0102/0923/0929/files/color.png?221"></div>
@@ -273,6 +332,22 @@
           "max": 50,
           "step": 1,
           "default": 6
+        }
+      ]
+    },
+    {
+      "type": "html",
+      "name": "Custom HTML",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title",
+          "default": "Custom HTML Title"
+        }, {
+          "type": "html",
+          "id": "code",
+          "label": "HTML"
         }
       ]
     }
