--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -61,19 +61,9 @@
   </div>
 
   {% comment %}Check to see if sidebar should be enabled{% endcomment %}
-  {% if section.blocks.size > 0 %}
-    {% assign sidebar = true %}
-  {% else %}
-    {% assign sidebar = false %}
-  {% endif %}
 
   <div class="product clearfix">
-    {% if sidebar %}
-      {% include 'sidebar' %}
-      <div class="twelve columns medium-down--one-whole sidebar--{{ sidebar }}">
-    {% else %}
       <div class="sixteen columns">
-    {% endif %}
 
     <div  class="product-{{ product.id }}"
           data-free-text="{{ settings.free_price_text }}"
@@ -277,24 +267,38 @@
       {% endif %}
     </div>
 
-    {% if sidebar %}
-
-            {% if section.settings.display_related_products %}
-              {% include 'include-related-products' %}
-            {% endif %}
-            {% if section.settings.display_recently_viewed %}
-              {% include 'include-recently-viewed' %}
-            {% endif %}
-
-          </div>
-        </div>
       </div>
+    </div>
+  </div>
 
-    {% else %}
-
-          </div>
-        </div>
+  <!-- start custom html code -->
+  <div class="container custom-content section-standard" data-section-id="{{ section.id }}" data-section-type="custom-content-section">
+    <div class="contain-full-width">
+      <div class="wrapper">
+        {% for block in section.blocks %}
+          {% case block.type %}
+            {% when 'html' %}
+              {% if block.settings.title != blank %}
+                <header>
+                  <h4>{{ block.settings.title | escape }}
+                  </h4>
+                </header>
+              {% endif %}
+              <div class="custom-content-container">
+                <div id="block-{{ block.id }}" class="custom__item custom__item-{{ block.type }} {% if block.settings.full_width %}custom__item-full_width{% endif %}" {{ block.shopify_attributes }}>
+                  <div class="content">
+                    {% if block.settings.code != blank %}
+                      {{ block.settings.code }}
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
+          {% endcase %}
+        {% endfor %}
       </div>
+    </div>
+  </div>
+  <!-- end custom html code -->
 
       <!-- start Recomatic code -->
 
@@ -317,7 +321,6 @@
         {% include 'include-recently-viewed' %}
       {% endif %}
 
-    {% endif %}
 
     <style>
       .swatch-element.color, .swatch-element.color label {
@@ -1006,6 +1009,22 @@ a[aria-label="permalink"] {
       "type": "filter_by_vendor",
       "name": "Vendor list",
       "limit": 1
+    },
+    {
+      "type": "html",
+      "name": "Custom HTML",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title",
+          "default": "Custom HTML Title"
+        }, {
+          "type": "html",
+          "id": "code",
+          "label": "HTML"
+        }
+      ]
     }
   ],
   "default": {
