added accessibe changes

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -179,6 +179,11 @@
           </div>
         {% endif %}
       </div><!--end footer_credits-->
+
+        <div id="accessibe_button">
+        < span data-acsb-custom-trigger="true"><img src="https://cdn.shopify.com/s/files/1/0102/0923/0929/files/t_accessibilityicon_50x50_44faa7fa-10a1-4fd3-9c34-b411c6385b6b.png?v=1666395529" width="60" height="60"</span>
+        </div>
+    
     </div>
   </div>
 </footer>
