--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,7 +12,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="theme-color" content="{{ settings.shop_bg_color }}">
+    <meta name="theme-color" content="{{ settings.shop_bg_color }}">acs
 
     {% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %}{% endif %}
     <title>
@@ -311,7 +311,7 @@
 
 
 <!--  Accessibe script    -->
- <script>(function(){var s = document.createElement('script'),e = ! document.body ? document.querySelector('head') : document.body;s.src = 'https://acsbapp.com/apps/app/assets/js/acsb.js';s.async = s.defer = true;s.onload = function(){acsbJS.init({statementLink : '',feedbackLink : '',footerHtml : '',hideMobile : false,hideTrigger : false,language : 'en',position : 'right',leadColor : '#69686d',triggerColor : '#69686d',triggerRadius : '50%',triggerPositionX : 'right',triggerPositionY : 'bottom',triggerIcon : 'default',triggerSize : 'medium',triggerOffsetX : 20,triggerOffsetY : 20,mobile : {triggerSize : 'small',triggerPositionX : 'right',triggerPositionY : 'bottom',triggerOffsetX : 10,triggerOffsetY : 10,triggerRadius : '50%'}});};e.appendChild(s);}());</script>
+ <script>(function(){var s = document.createElement('script'),e = ! document.body ? document.querySelector('head') : document.body;s.src = 'https://acsbapp.com/apps/app/assets/js/acsb.js';s.async = s.defer = true;s.onload = function(){acsbJS.init({statementLink : '',feedbackLink : '',footerHtml : '',hideMobile : true,hideTrigger : true,language : 'en',position : 'right',leadColor : '#69686d',triggerColor : '#69686d',triggerRadius : '50%',triggerPositionX : 'right',triggerPositionY : 'bottom',triggerIcon : 'default',triggerSize : 'medium',triggerOffsetX : 20,triggerOffsetY : 20,mobile : {triggerSize : 'small',triggerPositionX : 'right',triggerPositionY : 'bottom',triggerOffsetX : 10,triggerOffsetY : 10,triggerRadius : '50%'}});};e.appendChild(s);}());</script>
 <!-- Attentive and Shopify Tag Integration -->
     <script src="https://cdn.attn.tv/threedots/dtag.js"></script>
     <!--  Kustomer Chat -->
