closed final margin on accessibe_button style

--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -11197,5 +11197,5 @@ span.js-product-details a.secondary_button {
 
 #accessibe_button {
   float: right;
-  margin: 25px 50px 75px 100px
+  margin: 25px 50px 75px 100px;
 }
