--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ locale }}" dir="{{ direction }}" class="{{ checkout_html_classes }}">
   <head>
+    <script>(function () { function asyncLoad() { var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://s3.eu-west-1.amazonaws.com/production-klarna-il-shopify-osm/44241829bcc56116e10834fcdc3b3f3426feef24/three3dots.myshopify.com-1674719944165.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); }; if (window.attachEvent) { window.attachEvent('onload', asyncLoad); } else { window.addEventListener('load', asyncLoad, false); } })(); </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, user-scalable=0">
@@ -50,7 +51,7 @@
     </div>
 
     {{ tracking_code }}
-    <!-- VUE.AI TAG -->
+    <!-- VUE.AI TAG checkout -->
     <script src="https://vuex.vue.ai/embed-code/embed_code.js" async="async" defer="defer" data-msd-client-id="bd9f5d8d-e50a-4e51-9645-863f6148da59" data-msd-region="us-east-1"></script>
     {% if checkout.customer %}
       <div data-user-id="{{ checkout.customer.id }}" hidden="hidden" class="vuex-user-id_hidden"></div>
