--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -352,6 +352,62 @@ $(function() {
   {% endif %}
 
   /*============================================================================
+    Quick Shop
+  ==============================================================================*/
+
+  document.body.addEventListener('click', function ( event ) {
+    const eventElement = event.target;
+    if( eventElement.classList.contains("product-sizes__button")) {
+
+
+      let productVariant  = eventElement.getAttribute('data-variant');
+
+      $(eventElement).parent().parent().addClass("loading");
+  
+      $.ajax({
+        url: '/cart/add.js',
+        dataType: 'json',
+        cache: false,
+        type: 'post',
+        data: {
+          quantity: 1,
+          id: productVariant
+        },
+        success: function(itemData) {
+          $.ajax({
+            url: '/cart.js',
+            dataType: "json",
+            cache: false,
+            success: function(cart) {
+              $(eventElement).parent().parent().removeClass("loading");
+              $(eventElement).parent().parent().addClass("added");
+              setTimeout(function(){
+                $(eventElement).parent().parent().removeClass("added");
+              }, 3000);
+
+              const goCart = new GoCart();
+              $(".go-cart__trigger").click()
+              
+              refreshCart(cart);
+              if($('html').hasClass("remodal-is-locked")) {
+                $('.remodal-close').click();
+              }
+              floating_cart_visible();
+            }
+          });
+        },
+        error: function(XMLHttpRequest) {
+          console.log(XMLHttpRequest);
+        }
+      });
+    }
+  });
+
+    /*============================================================================
+    End Quick Shop
+  ==============================================================================*/
+
+  /*============================================================================
     Start of cart-related functionality
   ==============================================================================*/
 
@@ -545,13 +601,7 @@ $(function() {
                 $.fancybox.close();
               }
 
-              if($('#header').is(':visible')) {
-                $('#header .cart_container').addClass('active_link');
-              } else if ($('.sticky_nav--stick').length) {
-                $('.sticky_nav .cart_container').addClass('active_link');
-              } else {
-                $('.top_bar .cart_container').addClass('active_link');
-              }
+              floating_cart_visible();
 
               //block scrolling on mobile
               if ($(window).width() <= 798) {
@@ -584,6 +634,19 @@ $(function() {
   productPage.productSwatches();
 
 });
+
+//Make Visible the floating cart
+function floating_cart_visible() {
+  if($('#header').is(':visible')) {
+    $('#header .cart_container').addClass('active_link');
+  } else if ($('.sticky_nav--stick').length) {
+    $('.sticky_nav .cart_container').addClass('active_link');
+  } else if ($('.secondary_logo--true .main_nav_wrapper .cart_container').length) {
+    $('.secondary_logo--true .main_nav_wrapper .cart_container').addClass('active_link');
+  } else {
+    $('.top_bar .cart_container').addClass('active_link');
+  }
+};
 
 /*============================================================================
   Swatch options - second and third swatch 'sold-out' will update based on availability of previous options selected
