--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,6 +32,7 @@
     <!-- Stylesheets for Turbo 4.1.5 -->
     {{ 'styles.scss.css' | asset_url | stylesheet_tag }}
     {{ 'style-custom.scss.css' | asset_url | stylesheet_tag }}
+    {{ 'gocart.css' | asset_url | stylesheet_tag }}
     <script src="{{ 'jquery.min.js' | asset_url }}"></script>
 
 
@@ -381,13 +382,19 @@ var pix = new Image(1,1); pix.src = adlURL; } })();
   <input type="hidden" value="{{ customer.email }}" data-customer-id="{{ customer.id }}" data-customer-email="{{ customer.email }}" data-customer-name="{{ customer.name }}">
 {% endif %}
 <!-- VUE.AI TAG -->
-</body>
-</html>
-{% endcapture %}
-{% assign content = content | replace_first: '<!DOCTYPE', '!DOCTYPE' | split: ' <' %}
-{% for html in content %}{% assign htmlblock = html | strip | prepend: ' <' %}{{htmlblock | replace: ' </', '</'}}{% endfor %}
 <!-- Vue ai Headless -->
   {% if template contains 'collection' %}
     <script src="{{ 'headlessApp.js' | asset_url }}"></script>
   {% endif %}
 <!-- Vue ai Headless -->
+{{ 'gocart.js' | asset_url | script_tag }}
+{% section 'go-cart' %}
+<script>
+    const goCart = new GoCart();
+</script>
+</body>
+</html>
+{% endcapture %}
+{% assign content = content | replace_first: '<!DOCTYPE', '!DOCTYPE' | split: ' <' %}
+{% for html in content %}{% assign htmlblock = html | strip | prepend: ' <' %}{{htmlblock | replace: ' </', '</'}}{% endfor %}
+
